delete default body margin

--- a/index.html
+++ b/index.html
@@ -1,8 +1,15 @@
 <!doctype html>
 <html>
-    <head></head>
-    <body>
-        <div id="mount"></div>
-        <script src="./build/index.js"></script>
-    </body>
+	<head>
+		<style>
+			body
+			{
+				margin: 0;
+			}
+		</style>
+	</head>
+	<body>
+		<div id="mount"></div>
+		<script src="./build/index.js"></script>
+	</body>
 </html>
